--- a/test/integration/k8s/manifests/06-beyla-daemonset-multi-node.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-multi-node.yml
@@ -20,6 +20,8 @@ data:
         - exe_path: "/testserver"
           namespace: integration-test
     routes:
+      patterns:
+        - /jsonrpc
       unmatched: heuristic
     otel_metrics_export:
       endpoint: http://otelcol:4318
