fix: more relative paths

--- a/internal/test/integration/docker-compose-1.16.yml
+++ b/internal/test/integration/docker-compose-1.16.yml
@@ -15,7 +15,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     volumes:
       - ./configs/:/configs
