--- a/internal/test/integration/docker-compose-client.yml
+++ b/internal/test/integration/docker-compose-client.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/pingclient/Dockerfile
     image: hatest-pingclient
     environment:
@@ -11,7 +11,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config${INSTRUMENTER_CONFIG_SUFFIX}.yml
