--- a/internal/test/integration/docker-compose-java-kafka-400.yml
+++ b/internal/test/integration/docker-compose-java-kafka-400.yml
@@ -23,7 +23,7 @@ services:
 
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/javakafka/Dockerfile_400
     image: hatest-testserver-java-kafka
     ports:
@@ -36,7 +36,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     volumes:
       - ./configs/:/configs
