--- a/internal/test/integration/docker-compose-java.yml
+++ b/internal/test/integration/docker-compose-java.yml
@@ -13,7 +13,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-java.yml
