--- a/internal/test/integration/docker-compose-multiexec-otelsdk.yml
+++ b/internal/test/integration/docker-compose-multiexec-otelsdk.yml
@@ -1,7 +1,7 @@
 services:
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/testserver/Dockerfile
     image: hatest-testserver
     ports:
@@ -20,7 +20,7 @@ services:
 
   testserver1:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/testserver/Dockerfile_rename1
     image: hatest-testserver1
     ports:
@@ -33,7 +33,7 @@ services:
   # of metrics when they come from the same executable file
   testserver-duplicate:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/testserver/Dockerfile_duplicate
     image: hatest-testserver-duplicate
     ports:
@@ -56,7 +56,7 @@ services:
 
   pytestserverssl:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/pythonserver/Dockerfile_tls
     image: hatest-testserver-python-ssl
     ports:
@@ -64,7 +64,7 @@ services:
 
   pytestserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/pythonserver/Dockerfile_8083
     image: hatest-testserver-python
     ports:
@@ -72,7 +72,7 @@ services:
 
   ntestserverssl:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/nodejsserver/Dockerfile
     image: hatest-testserver-node-ssl
     command:
@@ -85,7 +85,7 @@ services:
 
   ntestserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/nodejsserver/Dockerfile_otel
     image: hatest-testserver-node
     ports:
