--- a/internal/test/integration/docker-compose-php-fpm.yml
+++ b/internal/test/integration/docker-compose-php-fpm.yml
@@ -37,7 +37,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-php.yml
