--- a/internal/test/integration/docker-compose-python-self.yml
+++ b/internal/test/integration/docker-compose-python-self.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/pythonselfserver/Dockerfile
     image: hatest-testserver-python
     ports:
@@ -20,7 +20,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     volumes:
       - ./configs/:/configs
