--- a/internal/test/integration/docker-compose-ruby.yml
+++ b/internal/test/integration/docker-compose-ruby.yml
@@ -26,7 +26,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-ruby.yml
