--- a/internal/test/oats/http/docker-compose-java-routes-custom.yml
+++ b/internal/test/oats/http/docker-compose-java-routes-custom.yml
@@ -1,7 +1,7 @@
 services:
   testserver:
     build:
-      context: ../../..
+      context: ../../../..
       dockerfile: ./internal/test/integration/components/javatestserver/Dockerfile_jar
     image: javakafka
     ports:
@@ -9,7 +9,7 @@ services:
   # eBPF auto instrumenter
   autoinstrumenter:
     build:
-      context: ../../..
+      context: ../../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces-custom-routes.yml
