--- a/internal/test/oats/redis/docker-compose-beyla-redis.yml
+++ b/internal/test/oats/redis/docker-compose-beyla-redis.yml
@@ -18,7 +18,7 @@ services:
   # eBPF auto instrumenter
   autoinstrumenter:
     build:
-      context: ../../..
+      context: ../../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces.yml
