--- a/internal/test/integration/docker-compose-1.17.yml
+++ b/internal/test/integration/docker-compose-1.17.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/testserver_1.17/Dockerfile
     image: hatest-testserver
     ports:
@@ -18,7 +18,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config${INSTRUMENTER_CONFIG_SUFFIX}.yml
