--- a/internal/test/integration/docker-compose-dotnet.yml
+++ b/internal/test/integration/docker-compose-dotnet.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/dotnetserver/Dockerfile
     image: hatest-testserver
     ports:
@@ -15,7 +15,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile${INSTRUMENT_DOCKERFILE_SUFFIX}
     entrypoint:
       - /beyla${INSTRUMENT_COMMAND_SUFFIX}
