--- a/internal/test/integration/docker-compose-elixir.yml
+++ b/internal/test/integration/docker-compose-elixir.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/elixir/Dockerfile
     image: hatest-testserver-elixir
     ports:
@@ -14,7 +14,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-elixir.yml
