--- a/internal/test/integration/docker-compose-netolly-rdns.yml
+++ b/internal/test/integration/docker-compose-netolly-rdns.yml
@@ -10,7 +10,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     volumes:
       - ./configs/:/configs
