--- a/internal/test/integration/docker-compose-nodejs.yml
+++ b/internal/test/integration/docker-compose-nodejs.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   testserver:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: internal/test/integration/components/nodejsserver/Dockerfile
     image: hatest-testserver-node
     command:
@@ -18,7 +18,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-node.yml
