--- a/internal/test/integration/docker-compose-python-sql-ssl.yml
+++ b/internal/test/integration/docker-compose-python-sql-ssl.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   sqlserver:
     build:
-      context: ../../test/integration/components/postgresql/
+      context: ../../../test/integration/components/postgresql/
       dockerfile: Dockerfile
     image: postgres
     command: -c ssl=on -c ssl_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem -c ssl_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
@@ -14,7 +14,7 @@ services:
 
   testserver:
     build:
-      context: ../../test/integration/components/pythonsql/
+      context: ../../../test/integration/components/pythonsql/
       dockerfile: Dockerfile_ssl
     image: hatest-testserver-python-sql
     ports:
@@ -27,7 +27,7 @@ services:
 
   autoinstrumenter:
     build:
-      context: ../..
+      context: ../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     volumes:
       - ./configs/:/configs
