--- a/internal/test/oats/kafka/docker-compose-beyla-java-kafka.yml
+++ b/internal/test/oats/kafka/docker-compose-beyla-java-kafka.yml
@@ -23,7 +23,7 @@ services:
       - "9093:9093"
   testserver:
     build:
-      context: ../../..
+      context: ../../../..
       dockerfile: ./internal/test/integration/components/javakafka/Dockerfile
     image: javakafka
     ports:
@@ -34,7 +34,7 @@ services:
   # eBPF auto instrumenter
   autoinstrumenter:
     build:
-      context: ../../..
+      context: ../../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces.yml
