--- a/internal/test/oats/kafka/docker-compose-beyla-python-kafka.yml
+++ b/internal/test/oats/kafka/docker-compose-beyla-python-kafka.yml
@@ -42,7 +42,7 @@ services:
   # eBPF auto instrumenter
   autoinstrumenter:
     build:
-      context: ../../..
+      context: ../../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces.yml
