--- a/internal/test/oats/sql/docker-compose-beyla-mysql.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-mysql.yml
@@ -21,7 +21,7 @@ services:
   # eBPF auto instrumenter
   autoinstrumenter:
     build:
-      context: ../../..
+      context: ../../../..
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     command:
       - --config=/configs/instrumenter-config-traces-sql-text.yml
