--- a/internal/test/integration/docker-compose-netolly-direction.yml
+++ b/internal/test/integration/docker-compose-netolly-direction.yml
@@ -32,8 +32,8 @@ services:
     volumes:
       - ./configs/:/configs
       - ./system/sys/kernel/security:/sys/kernel/security
-      - ../../testoutput:/coverage
-      - ../../testoutput/run-netolly-direction:/var/run/beyla
+      - ../../../testoutput:/coverage
+      - ../../../testoutput/run-netolly-direction:/var/run/beyla
     image: hatest-autoinstrumenter
     privileged: true
     network_mode: service:testserver
