--- a/internal/test/integration/docker-compose-nodejs-dist.yml
+++ b/internal/test/integration/docker-compose-nodejs-dist.yml
@@ -35,8 +35,8 @@ services:
       - ./configs/:/configs
       - ./system/sys/kernel/security:/sys/kernel/security
       - /sys/fs/cgroup:/sys/fs/cgroup
-      - ../../testoutput:/coverage
-      - ../../testoutput/run-nodejsdist:/var/run/beyla
+      - ../../../testoutput:/coverage
+      - ../../../testoutput/run-nodejsdist:/var/run/beyla
     image: hatest-autoinstrumenter-b
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     network_mode: "host"
