--- a/internal/test/integration/docker-compose-1.16.yml
+++ b/internal/test/integration/docker-compose-1.16.yml
@@ -19,8 +19,8 @@ services:
       dockerfile: ./internal/test/integration/components/beyla/Dockerfile
     volumes:
       - ./configs/:/configs
-      - ../../testoutput:/coverage
-      - ../../testoutput/run-1.16:/var/run/beyla
+      - ../../../testoutput:/coverage
+      - ../../../testoutput/run-1.16:/var/run/beyla
     image: hatest-autoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     pid: "service:testserver"
