--- a/internal/test/integration/docker-compose-discovery.yml
+++ b/internal/test/integration/docker-compose-discovery.yml
@@ -28,8 +28,8 @@ services:
     volumes:
       - ./configs/:/configs
       - ./system/sys/kernel/security:/sys/kernel/security
-      - ../../testoutput:/coverage
-      - ../../testoutput/run-multi:/var/run/beyla
+      - ../../../testoutput:/coverage
+      - ../../../testoutput/run-multi:/var/run/beyla
     image: hatest-autoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     pid: "host"
