--- a/internal/test/integration/docker-compose-elixir.yml
+++ b/internal/test/integration/docker-compose-elixir.yml
@@ -21,8 +21,8 @@ services:
     volumes:
       - ./configs/:/configs
       - ./system/sys/kernel/security:/sys/kernel/security
-      - ../../testoutput:/coverage
-      - ../../testoutput/run-elixir:/var/run/beyla
+      - ../../../testoutput:/coverage
+      - ../../../testoutput/run-elixir:/var/run/beyla
     image: hatest-autoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     network_mode: "service:testserver"
