--- a/internal/test/integration/docker-compose-http2.yml
+++ b/internal/test/integration/docker-compose-http2.yml
@@ -34,8 +34,8 @@ services:
     volumes:
       - ./configs/:/configs
       - ./system/sys/kernel/security${SECURITY_CONFIG_SUFFIX}:/sys/kernel/security
-      - ../../testoutput:/coverage
-      - ../../testoutput/run-http2:/var/run/beyla
+      - ../../../testoutput:/coverage
+      - ../../../testoutput/run-http2:/var/run/beyla
     image: hatest-autoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     pid: "host"
