--- a/internal/test/oats/kafka/docker-compose-beyla-java-kafka.yml
+++ b/internal/test/oats/kafka/docker-compose-beyla-java-kafka.yml
@@ -41,7 +41,7 @@ services:
     volumes:
       - {{ .ConfigDir }}:/configs
       - ./testoutput/run:/var/run/beyla
-      - ../../../testoutput:/coverage
+      - ../../../../testoutput:/coverage
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     network_mode: "service:testserver"
     pid: "service:testserver"
