--- a/internal/test/oats/sql/docker-compose-beyla-gosqlclient-postgres.yml
+++ b/internal/test/oats/sql/docker-compose-beyla-gosqlclient-postgres.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - {{ .ConfigDir }}:/configs
       - ./testoutput/run:/var/run/beyla
-      - ../../../testoutput:/coverage
+      - ../../../../testoutput:/coverage
     cap_add:
       - SYS_ADMIN
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
