--- a/internal/test/integration/components/pingclient/Dockerfile
+++ b/internal/test/integration/components/pingclient/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /src
 
 # Copy the go manifests and source
 COPY vendor/ vendor/
-COPY test/ test/
+COPY internal/test/ internal/test/
 COPY go.mod go.mod
 COPY go.sum go.sum
 
