--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -2,9 +2,31 @@ name: Pull request integration tests ARM
 
 on:
   push:
-    branches: [ 'main', 'release-*' ]
+    branches: ["main", "release-*"]
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
+      - "bpf/**"
+      - "internal/**"
+      - "pkg/**"
+      - "cmd/**"
+      - "vendor/**"
+      - "Makefile"
+      - ".github/workflows/pull_request_integration_tests_arm.yml"
   pull_request:
-    branches: [ 'main', 'release-*' ]
+    branches: ["main", "release-*"]
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
+      - "bpf/**"
+      - "internal/**"
+      - "pkg/**"
+      - "cmd/**"
+      - "vendor/**"
+      - "Makefile"
+      - ".github/workflows/pull_request_integration_tests_arm.yml"
 
 # Set restrictive permissions at workflow level
 permissions:
@@ -20,9 +42,6 @@ jobs:
       pull-requests: write
       # required for CODECOV token
       id-token: write
-    strategy:
-      matrix:
-        go: [ '1.25' ]
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
         with:
@@ -30,8 +49,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3
         with:
-          cache: false  # Disable caching to avoid extraction conflicts
-          go-version: ${{ matrix.go }}
+          cache: false # Disable caching to avoid extraction conflicts
+          go-version-file: "go.mod"
       - name: Clean up disk space
         run: |
           docker system prune -af
