--- a/.github/workflows/pull_request_oats_test.yml
+++ b/.github/workflows/pull_request_oats_test.yml
@@ -3,8 +3,32 @@ name: PR OATS test
 on:
   push:
     branches: ["main", "release-*"]
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
+      - "bpf/**"
+      - "internal/**"
+      - "pkg/**"
+      - "cmd/**"
+      - "vendor/**"
+      - "Makefile"
+      - "scripts/generate-dir-matrix.sh"
+      - ".github/workflows/pull_request_oats_test.yml"
   pull_request:
     branches: ["main", "release-*"]
+    paths:
+      - "**.go"
+      - "go.mod"
+      - "go.sum"
+      - "bpf/**"
+      - "internal/**"
+      - "pkg/**"
+      - "cmd/**"
+      - "vendor/**"
+      - "Makefile"
+      - "scripts/generate-dir-matrix.sh"
+      - ".github/workflows/pull_request_oats_test.yml"
 
 permissions:
   contents: read
