--- a/internal/test/integration/k8s/manifests/00-kind.yml
+++ b/internal/test/integration/k8s/manifests/00-kind.yml
@@ -10,7 +10,7 @@ nodes:
       - hostPath: ../../configs
         containerPath: /configs
       # testoutput folder to store coverage data
-      - hostPath: ../../../../testoutput
+      - hostPath: ../../../../../testoutput
         containerPath: /testoutput
     extraPortMappings:
       # to avoid having to do port-forwarding from the Go client (a bit cumbersome process),
