--- a/internal/test/integration/k8s/manifests/00-kind-multi-zone.yml
+++ b/internal/test/integration/k8s/manifests/00-kind-multi-zone.yml
@@ -12,7 +12,7 @@ nodes:
       - hostPath: ../../configs
         containerPath: /configs
       # testoutput folder to store coverage data
-      - hostPath: ../../../../testoutput
+      - hostPath: ../../../../../testoutput
         containerPath: /testoutput
   - role: worker
     labels:
@@ -24,7 +24,7 @@ nodes:
       - hostPath: ../../configs
         containerPath: /configs
       # testoutput folder to store coverage data
-      - hostPath: ../../../../testoutput
+      - hostPath: ../../../../../testoutput
         containerPath: /testoutput
   - role: worker
     labels:
@@ -38,7 +38,7 @@ nodes:
       - hostPath: ../../configs
         containerPath: /configs
       # testoutput folder to store coverage data
-      - hostPath: ../../../../testoutput
+      - hostPath: ../../../../../testoutput
         containerPath: /testoutput
     extraPortMappings:
       # to avoid having to do port-forwarding from the Go client (a bit cumbersome process),
