--- a/charts/beyla/Chart.yaml
+++ b/charts/beyla/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: beyla
-version: 1.9.9
+version: 1.10.0
 appVersion: 2.7.5
 description: eBPF-based autoinstrumentation HTTP, HTTP2 and gRPC services, as well as network metrics.
 home: https://grafana.com/oss/beyla-ebpf/
@@ -21,3 +21,5 @@ maintainers:
     url: https://github.com/marctc
   - name: rafaelroquetto
     url: https://github.com/rafaelroquetto
+  - name: skl
+    url: https://github.com/skl
