--- a/charts/beyla/values.yaml
+++ b/charts/beyla/values.yaml
@@ -7,6 +7,9 @@ global:
     # -- Optional set of global image pull secrets.
     pullSecrets: []
 
+# -- Whether to deploy the Beyla DaemonSet. Defaults to true. Set to false to deploy only the Kubernetes metadata cache.
+enabled: true
+
 image:
   # -- Beyla image registry (defaults to docker.io)
   registry: "docker.io"
