--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,7 +1,13 @@
 {
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   extends: ["config:best-practices", "helpers:pinGitHubActionDigestsToSemver"],
-  ignorePaths: ["NOTICES/**"],
+  ignorePaths: [
+    // github.com/Shopify/sarama has been moved to github.com/IBM/sarama
+    // but we keep supporting the go-offsets for the outdated library, which must not
+    // be updated.
+    "configs/offsets/shopify/**",
+    "NOTICES/**",
+  ],
   packageRules: [
     {
       groupName: "all patch and digest versions",
@@ -16,13 +22,9 @@
     },
     {
       description: "Disable Go 1.17 testserver updates",
-      matchFileNames: [
-        "internal/test/integration/components/testserver_1.17/Dockerfile",
-        "internal/test/integration/components/testserver_1.17/go.mod",
-        "internal/test/integration/components/testserver_1.17/go.sum",
-      ],
-      matchDatasources: ["*"],
-      matchPackageNames: ["*"],
+      matchFileNames: ["internal/test/integration/components/testserver_1.17"],
+      matchDatasources: ["docker"],
+      matchPackageNames: ["golang"],
       enabled: false,
     },
   ],
